@@ -685,6 +685,16 @@
                 <artifactId>dokka-maven-plugin</artifactId>
                 <version>1.9.20</version>
                 <inherited>true</inherited>
+<!--                Addition that may be buggy-->
+                <executions>
+                    <execution>
+                        <id>dokka-html</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>dokka</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <outputDir>${project.build.directory}/dokka-html</outputDir>
                     <dokkaPlugins>
@@ -699,6 +709,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <!--                Addition that may be buggy-->
+                <version>3.2.5</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                    <argLine>@{argLine} -Dfile.encoding=UTF-8 -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
